qt/multimedia/gen_qaudiorolecontrol.h

class QAudioRoleControl;
class QMetaObject;
typedef struct QAudioRoleControl QAudioRoleControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QAudioRoleControl_metaObject(const QAudioRoleControl* self);
void* QAudioRoleControl_metacast(QAudioRoleControl* self, const char* param1);
int QAudioRoleControl_metacall(QAudioRoleControl* self, int param1, int param2, void** param3);
struct miqt_string QAudioRoleControl_tr(const char* s);
struct miqt_string QAudioRoleControl_trUtf8(const char* s);
int QAudioRoleControl_audioRole(const QAudioRoleControl* self);
void QAudioRoleControl_setAudioRole(QAudioRoleControl* self, int role);
struct miqt_array /* of int */  QAudioRoleControl_supportedAudioRoles(const QAudioRoleControl* self);
void QAudioRoleControl_audioRoleChanged(QAudioRoleControl* self, int role);
void QAudioRoleControl_connect_audioRoleChanged(QAudioRoleControl* self, intptr_t slot);
struct miqt_string QAudioRoleControl_tr2(const char* s, const char* c);
struct miqt_string QAudioRoleControl_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioRoleControl_trUtf82(const char* s, const char* c);
struct miqt_string QAudioRoleControl_trUtf83(const char* s, const char* c, int n);
void QAudioRoleControl_delete(QAudioRoleControl* self);